Bug 161708 - "show in menu" cannot be flagged with only one profile.
Summary: "show in menu" cannot be flagged with only one profile.
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-06 16:20 UTC by FiNeX
Modified: 2008-05-17 11:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2008-05-06 16:20:26 UTC
Version:            (using Devel)
Installed from:    Compiled sources

1) start konsole
2) open "manage profiles" dialog
3) be sure to have only one profile to the list
4) click to the "star" on the "show in menu" column, the "star" will disappear

Doing that you cannot flag again the "show in menu". You'll have to close and reopen the dialog (the star will re-appear).
Comment 1 Robert Knight 2008-05-17 10:58:38 UTC
SVN commit 808649 by knight:


Fix 'Show in Menu' toggle not working when no favorites are currently selected
and the favorite status for the selected item is off in the config file.

BUG: 161708



 M  +1 -1      ManageProfilesDialog.cpp  
 M  +5 -2      SessionManager.cpp  
 M  +1 -1      SessionManager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=808649
Comment 2 FiNeX 2008-05-17 11:29:44 UTC
Thanks Robert :-)