Fix 'Show in Menu' toggle not working when no favorites are currently selected and the favorite status for the selected item is off in the config file.

BUG: 161708


svn path=/trunk/KDE/kdebase/apps/konsole/; revision=808649